added cafe menu page to development projects page

--- a/development_projects.html
+++ b/development_projects.html
@@ -28,6 +28,7 @@
         <h1 class="fcc">Free Code Camp Projects</h1>
         <ol>
             <li><a href="catphotoapp.html">Cat Photo App Page</a></li>
+            <li><a href="cafe_menu.html">Cafe Menu Web Page</a></li>
         </ol>
     </div>
     <div class="col3">
