changed many colors to variable colors

--- a/Certificates/appreciation.html
+++ b/Certificates/appreciation.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
     <title>Certificate Of Appreciation</title>
-    <link href="css/appreciation.css" rel="stylesheet">
+    <link href="../css/appreciation.css" rel="stylesheet">
 </head>
 <body>
-<img src="Images/certificate_of%20_appreciation_barak_obama.jpg" alt="Certificate of Appreciation From President Barak Obama">
+<img src="../Images/certificate_of%20_appreciation_barak_obama.jpg" alt="Certificate of Appreciation From President Barak Obama">
 </body>
 </html>
