--- a/Certificates/codeup.html
+++ b/Certificates/codeup.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
     <title>Codeup Certificate</title>
-    <link href="css/codeup.css" rel="stylesheet">
+    <link href="../css/codeup.css" rel="stylesheet">
 </head>
 <body>
-<img src="Images/Codeup_Graduation_Certificate.jpg" alt="Codeup Graduation Certificate">
+<img src="../Images/Codeup_Graduation_Certificate.jpg" alt="Codeup Graduation Certificate">
 </body>
 </html>
