--- a/Certificates/recognition.html
+++ b/Certificates/recognition.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
     <title>Certificate Of Recognition</title>
-    <link href="css/recognition.css" rel="stylesheet">
+    <link href="../css/recognition.css" rel="stylesheet">
 </head>
 <body>
-<img src="Images/Certificate_Of_Recognition_Cold_War.jpg"
+<img src="../Images/Certificate_Of_Recognition_Cold_War.jpg"
      alt="Certificate of Recognition - Service During The Cold War">
 </body>
 </html>
