--- a/Codeup/weathermap.html
+++ b/Codeup/weathermap.html
@@ -15,7 +15,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;700&display=swap" rel="stylesheet">
   <!--Link to CSS page-->
-  <link href="css/weather.css" rel="stylesheet">
+  <link href="../css/weather.css" rel="stylesheet">
 </head>
 <body>
 <!--Complete container-->
@@ -94,10 +94,10 @@
 <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI="
         crossorigin="anonymous"></script>
 <!--Link to keys page-->
-<script src="js/keys.js"></script>
+<script src="../js/keys.js"></script>
 <!--Link to mapbox geocoder page-->
-<script src="js/mapbox-geocoder-utils.js"></script>
+<script src="../js/mapbox-geocoder-utils.js"></script>
 <!--Link to JS page-->
-<script src="js/weather.js" type="module"></script>
+<script src="../js/weather.js" type="module"></script>
 </body>
 </html>
