--- a/FreeCodeCamp/cafe_menu.html
+++ b/FreeCodeCamp/cafe_menu.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Cafe Menu</title>
-    <link rel="stylesheet" type="text/css" href="css/cafestyles.css">
+    <link rel="stylesheet" type="text/css" href="../css/cafestyles.css">
 </head>
 <body>
 <div class="menu">
     <header>
-        <script src="js/timing.js"></script>
+        <script src="../js/timing.js"></script>
         <h1>CAMPER CAFE</h1>
         <p class="established">Est. 2020</p>
     </header>
