--- a/Certificates/usmchd.html
+++ b/Certificates/usmchd.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
     <title>United States Marine Corps Honorable Discharge</title>
-    <link href="css/usmchd.css" rel="stylesheet">
+    <link href="../css/usmchd.css" rel="stylesheet">
 </head>
 <body>
-<img src="Images/USMC_Discharge.jpg" alt="Honorable Discharge Certificate - USMC(R)">
+<img src="../Images/USMC_Discharge.jpg" alt="Honorable Discharge Certificate - USMC(R)">
 </body>
 </html>
