--- a/OtherProjects/encoding.html
+++ b/OtherProjects/encoding.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/encoding.css">
+  <link rel="stylesheet" href="../css/encoding.css">
 </head>
 <body>
 <div>
@@ -22,7 +22,7 @@
     <h2 class="phrase">Encoded Phrase</h2>
     <p><span id="phrase"></span></p>
 </div>
-<script src="js/functions.js"></script>
+<script src="../js/functions.js"></script>
 <script>document.getElementById("phrase").innerHTML = encodeInput()</script>
 <script src="https://kit.fontawesome.com/68715d24c0.js" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.6.1.min.js"
