--- a/OtherProjects/war.html
+++ b/OtherProjects/war.html
@@ -8,8 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"/>
     <title>War</title>
-    <script src="js/war.js" type="module"></script>
-    <link rel="stylesheet" href="css/war.css">
+    <script src="../js/war.js" type="module"></script>
+    <link rel="stylesheet" href="../css/war.css">
 </head>
 <body>
 <!--Code supplied by Web Dev Simplified-->
