--- a/awards_decorations.html
+++ b/awards_decorations.html
@@ -40,15 +40,15 @@
     <h2>Other Awards, Certifications and Decorations</h2>
     <hr>
     <section class="certs">
-        <a href="respwebdesign.html"><img src="Images/FreeCodeCamp%20-%20Responsive%20Web%20Design%20Certificate.png" alt="freeCodeCamp Certificate of Completion - Responsive Web Design"></a>
-        <a href="codeup.html"><img src="Images/Codeup_Graduation_Certificate.jpg" alt="Certificate of Completion - Web Development"></a>
-        <a href="appreciation.html"><img src="Images/certificate_of%20_appreciation_barak_obama.jpg" alt="Certificate of Appreciation From President Barak Obama"></a>
-        <a href="retirement.html"><img src="Images/certificate_of_retirement.jpg" alt="Certificate of Retirement from the United States Air Force"></a>
-        <a href="njanghd.html"><img src="Images/NJANG_Honorable_Discharge_Certificate.jpg" alt="Air National Guard Honorable Discharge Certificate"></a>
+        <a href="Certificates/respwebdesign.html"><img src="Images/FreeCodeCamp%20-%20Responsive%20Web%20Design%20Certificate.png" alt="freeCodeCamp Certificate of Completion - Responsive Web Design"></a>
+        <a href="Certificates/codeup.html"><img src="Images/Codeup_Graduation_Certificate.jpg" alt="Certificate of Completion - Web Development"></a>
+        <a href="Certificates/appreciation.html"><img src="Images/certificate_of%20_appreciation_barak_obama.jpg" alt="Certificate of Appreciation From President Barak Obama"></a>
+        <a href="Certificates/retirement.html"><img src="Images/certificate_of_retirement.jpg" alt="Certificate of Retirement from the United States Air Force"></a>
+        <a href="Certificates/njanghd.html"><img src="Images/NJANG_Honorable_Discharge_Certificate.jpg" alt="Air National Guard Honorable Discharge Certificate"></a>
 <!--        <img src="Images/CAANG_Honorable_Discharge.jpg" alt="California Air National Guard Honorable Discharge">-->
 <!--        <img src="Images/NVANG_Honorable_Discharge.jpg" alt="Nevada Air National Guard Honorable Discharge">-->
-        <a href="recognition.html"><img src="Images/Certificate_Of_Recognition_Cold_War.jpg" alt="Certificate of Recognition - Service During The Cold War"></a>
-        <a href="usmchd.html"><img src="Images/USMC_Discharge.jpg" alt="Honorable Discharge Certificate - USMC(R)"></a>
+        <a href="Certificates/recognition.html"><img src="Images/Certificate_Of_Recognition_Cold_War.jpg" alt="Certificate of Recognition - Service During The Cold War"></a>
+        <a href="Certificates/usmchd.html"><img src="Images/USMC_Discharge.jpg" alt="Honorable Discharge Certificate - USMC(R)"></a>
         <img src="Images/pistol_sharpshooter.jpeg" alt="9MM Pistol Sharpshooter" class="m9badge">
         <img src="Images/rifle_expert.jpeg" alt="M-16 Rifle Expert Badge" class="m16Badge">
         <img src="Images/TRAA_Patch.jpeg" class="patch" alt="Nationally Certified Tow Operator Patch">
