--- a/development_projects.html
+++ b/development_projects.html
@@ -6,38 +6,44 @@
     <link href="css/development.css" rel="stylesheet">
 </head>
 <body>
-<h2>DEVELOPMENT PROJECTS</h2>
-<h3>Click On A Link To View A Project</h3>
+<h1>DEVELOPMENT PROJECTS</h1>
+<h2>Click On A Link To View A Project</h2>
 <section class="container">
-    <div class="col1">
-        <h1 class="codeup-proj">Codeup Projects</h1>
-        <ol>
-            <li><a href="http://rafagithub135.github.io"> Resume web page (McCloskey)</a></li>
-            <li><a href="https://github.com/MarcusandRalphorg/media-queries">Codeup Media Queries (Marcus/Ralph)</a></li>
-            <li><a href="https://github.com/Leonard-Ralph-Jesse-org/responsive-site">Codeup Responsive Site (Leonard/Ralph/Jesse)</a></li>
-            <li><a href="https://github.com/ortiz-mccloskey-urton-project/coffee-project">Codeup Coffee Project (Ortiz/McCloskey/Urton)</a></li>
-            <li><a href="https://github.com/mccloskey-hall-media-queries/media-queries-exercise">Codeup Media Queries (McCloskey/Hall)</a></li>
-            <li><a href="https://github.com/Neely-McCloskey/codeup-design-project">Codeup Design Project (Neely/McCloskey)</a></li>
-            <li><a href="https://github.com/orgs/McCloskey-Ramos-Coffee-Project/repositories">Coffee Project (McCloskey/Ramos)</a></li>
-            <li><a href="https://github.com/Rafagithub135/Weathermap">Weather Map (McCloskey)</a></li>
-            <li><a href="https://github.com/Villegas-McCloskey-Movies/Movie-Project">Movie Project (Villegas/McCloskey)</a></li>
-            <li>Sandlot Connect (Wilson/McCloskey/Razo) - Deactivated</li>
-        </ol>
-    </div>
     <div class="col2">
-        <h1 class="fcc">Free Code Camp Projects</h1>
+        <h3 class="fcc">Free Code Camp Projects</h3>
         <ol>
-            <li><a href="catphotoapp.html">Cat Photo App Page</a></li>
-            <li><a href="cafe_menu.html">Cafe Menu Web Page</a></li>
+            <li><a href="FreeCodeCamp/catphotoapp.html">Cat Photo App Page (freeCodeCamp/McCloskey)</a></li>
+            <li><a href="FreeCodeCamp/cafe_menu.html">Cafe Menu Web Page (freeCodeCamp/McCloskey)</a></li>
         </ol>
     </div>
     <div class="col3">
-        <h1 class="outside">Other Projects</h1>
+        <h3 class="outside">Other Projects</h3>
         <ol>
-            <li><a href="war.html">War Card Game (Web Dev Simplified/McCloskey)</a></li>
-            <a href="https://github.com/Rafagithub135/cookie">
-            <li>Cookie's Place website (McCloskey - I'm currently working on this site)</li>
-        </a>
+            <li><a href="OtherProjects/war.html">War Card Game (Web Dev Simplified/McCloskey)</a></li>
+            <li><a href="https://github.com/Rafagithub135/cookie">
+                Cookie's Place website (McCloskey - I'm currently working on this site)</a></li>
+        </ol>
+    </div>
+    <div class="col1">
+        <h3 class="codeup-proj">Codeup Projects</h3>
+        <ol>
+            <li><a href="http://rafagithub135.github.io"> Resume web page (McCloskey)</a></li>
+            <li><a href="https://github.com/MarcusandRalphorg/media-queries">Codeup Media Queries (Marcus/Ralph)</a>
+            </li>
+            <li><a href="https://github.com/Leonard-Ralph-Jesse-org/responsive-site">Codeup Responsive Site
+                (Leonard/Ralph/Jesse)</a></li>
+            <li><a href="https://github.com/ortiz-mccloskey-urton-project/coffee-project">Codeup Coffee Project
+                (Ortiz/McCloskey/Urton)</a></li>
+            <li><a href="https://github.com/mccloskey-hall-media-queries/media-queries-exercise">Codeup Media Queries
+                (McCloskey/Hall)</a></li>
+            <li><a href="https://github.com/Neely-McCloskey/codeup-design-project">Codeup Design Project
+                (Neely/McCloskey)</a></li>
+            <li><a href="https://github.com/orgs/McCloskey-Ramos-Coffee-Project/repositories">Coffee Project
+                (McCloskey/Ramos)</a></li>
+            <li><a href="https://github.com/Rafagithub135/Weathermap">Weather Map (McCloskey)</a></li>
+            <li><a href="https://github.com/Villegas-McCloskey-Movies/Movie-Project">Movie Project
+                (Villegas/McCloskey)</a></li>
+            <li>Sandlot Connect (Wilson/McCloskey/Razo) - Deactivated</li>
         </ol>
     </div>
 </section>
