added color marker page to development projects

--- a/development_projects.html
+++ b/development_projects.html
@@ -14,6 +14,7 @@
         <ol>
             <li><a href="FreeCodeCamp/catphotoapp.html">Cat Photo App Page (freeCodeCamp/McCloskey)</a></li>
             <li><a href="FreeCodeCamp/cafe_menu.html">Cafe Menu Web Page (freeCodeCamp/McCloskey)</a></li>
+            <li><a href="FreeCodeCamp/color_markers.html">Color Marker Web Page (freeCodeCamp/McCloskey)</a></li>
         </ol>
     </div>
     <div class="col3">
