changed the background and made the certificates each a card from bootstrap on the awards page

--- a/development_projects.html
+++ b/development_projects.html
@@ -15,6 +15,7 @@
             <li><a href="FreeCodeCamp/catphotoapp.html">Cat Photo App Page (freeCodeCamp/McCloskey)</a></li>
             <li><a href="FreeCodeCamp/cafe_menu.html">Cafe Menu Web Page (freeCodeCamp/McCloskey)</a></li>
             <li><a href="FreeCodeCamp/color_markers.html">Color Marker Web Page (freeCodeCamp/McCloskey)</a></li>
+            <li><a href="FreeCodeCamp/registration_form.html">Registration Form (freeCodeCamp/McCloskey)</a></li>
         </ol>
     </div>
     <div class="col3">
