added some media queries to the index page

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </section>
             <!--resume content-->
             <div class="col-12">
-                <h3 class="text-primary" id="skills">SKILLS AND ABILITIES</h3>
+                <h3 class="skills-title" id="skills">SKILLS AND ABILITIES</h3>
                 <!--Skills are supposed to come in from variables on functions page-->
                 <section>
                     <div class="container">
@@ -68,29 +68,29 @@
             </div>
             <section class="col-md-6">
                 <div class="reference-links mt-0 row row-md-2">
-                    <h3 class="text-primary"><a href="academic.html"> ACADEMIC</a></h3>
+                    <h3 class="ref-title"><a href="academic.html"> ACADEMIC</a></h3>
                     <p class="link">To see where I've gone to school, <a href="academic.html">click here.</a></p>
-                    <h3 class="text-primary"><a href="work_history.html"> PROFESSIONAL EXPERIENCE</a></h3>
+                    <h3 class="ref-title"><a href="work_history.html"> PROFESSIONAL EXPERIENCE</a></h3>
                     <p class="link">To see where I've worked, <a href="work_history.html">click here.</a></p>
                 </div>
             </section>
             <section class="col-md-6">
                 <div class="reference-links mt-0 row row-md-2">
-                    <h3 class="text-primary"><a href="development_projects.html">DEVELOPMENT PROJECTS</a></h3>
+                    <h3 class="ref-title"><a href="development_projects.html">DEVELOPMENT PROJECTS</a></h3>
                     <p class="link">To see development projects I've worked on, <a href="development_projects.html">click here.</a></p>
-                    <h3 class="text-primary"><a href="awards_decorations.html">AWARDS AND DECORATIONS</a></h3>
+                    <h3 class="ref-title"><a href="awards_decorations.html">AWARDS AND DECORATIONS</a></h3>
                     <p class="link">To see my awards, decorations and personal achievements, <a href="awards_decorations.html">click here.</a></p>
                 </div>
             </section>
             <section class="col-md-6">
                 <div class="reference-links mt-0 row row-md-2">
-                    <h3 class="text-primary"><a href="broken.html">ENCODE A WORD, SENTENCE, OR PARAGRAPH</a></h3>
+                    <h3 class="ref-title"><a href="broken.html">ENCODE A WORD, SENTENCE, OR PARAGRAPH</a></h3>
                     <p class="link">If you would like to encode a word, sentence, or paragraph, I have created a program to do so. Just <a href="OtherProjects/encoding.html">click here</a> to go to the page.</p>
                 </div>
             </section>
             <section class="col-md-6">
                 <div class="reference-links mt-0 row row-md-2">
-                    <h3 class="text-primary"><a href="broken.html">CHECK THE WEATHER ANYWHERE IN THE WORLD!</a></h3>
+                    <h3 class="ref-title"><a href="broken.html">CHECK THE WEATHER ANYWHERE IN THE WORLD!</a></h3>
                     <p class="link">To see what the weather forecast is for the next seven days, <a href="broken.html">click here</a> to go to the page.</p>
                 </div>
             </section>
