--- a/academic.html
+++ b/academic.html
@@ -35,7 +35,7 @@
                     <p class="ccp_text text2">Philadelphia, Pennsylvania</p>
                     <p class="ccp_text text2">Computer Science</p>
                     <p class="ccp_text text2">2023 - 2023</p>
-                    <p class="ccp_text text3">I'm pursuing my Computer Science degree.  I am currently attending the Community College of Philadelphia to get some prerequisites.  Then I will be transferring to Penn State.</p>
+                    <p class="ccp_text text3">I'm pursuing my Computer Science degree.  I am currently attending the Community College of Philadelphia to take some prerequisites.  Then I will be transferring to Penn State.</p>
                 </div>
             </div>
             <div class="row">
