added a blue square to show support for Israel

--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
             </section>
         </div>
     </div>
+    <div class="no-hate">
+        <p>SAY NO TO HATE!</p>
+    </div>
     <!-- hitwebcounter Code START  <a href="https://www.hitwebcounter.com" target="_blank"></a>-->
     <img src="https://hitwebcounter.com/counter/counter.php?page=8300263&style=0025&nbdigits=7&type=page&initCount=0"
          title="Free Counter" Alt="web counter" class="counter"/>
