added accessibility project to development projects

--- a/development_projects.html
+++ b/development_projects.html
@@ -17,6 +17,7 @@
             <li><a href="FreeCodeCamp/color_markers.html">Color Marker Web Page (freeCodeCamp/McCloskey)</a></li>
             <li><a href="FreeCodeCamp/registration_form.html">Registration Form (freeCodeCamp/McCloskey)</a></li>
             <li><a href="FreeCodeCamp/survey_form.html">Survey Form (freeCodeCamp/McCloskey)</a></li>
+            <li><a href="FreeCodeCamp/accessibility_project.html">Accessibility Project (freeCodeCamp/McCloskey</a></li>
         </ol>
     </div>
     <div class="col3">
