added comment for personal quote - to be moved to an about me page at a later date

--- a/index.html
+++ b/index.html
@@ -104,6 +104,10 @@
             </section>
         </div>
     </div>
+<!--    <div class="quote">-->
+<!--        <p>FAVORITE QUOTE:  "You're only young once, but you can be immature forever." - Germaine Greer - Stated by Larry Andersen in the summer of 1989 (<a-->
+<!--                href="https://sabr.org/bioproj/person/larry-andersen/">1</a>)</p>-->
+<!--    </div>-->
     <div class="no-hate">
         <p>SAY NO TO HATE!</p>
     </div>
