added images and created an ad for vettix

--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
                     <a href="https://www.airforce.com"><img src="Images/air-force-veteran.png" alt="United States Air Force Veteran" id="afvet"></a>
                 </div>
             </section>
+            <div class="col-md-12 vettix ms-auto">
+                <a href="https://www.vettix.org/ref/319690"><img src="" alt="Tickets for Military and Veterans" id="vettix"></a>
+            </div>
         </div>
     </div>
 <!--    <div class="quote">-->
