added text to vettix ad and sized the images

--- a/index.html
+++ b/index.html
@@ -103,7 +103,9 @@
                 </div>
             </section>
             <div class="col-md-12 vettix ms-auto">
+                <p class="vtad">If you are in the military or are a veteran, click here <i class="fa-solid fa-arrow-right"> </i> </p>
                 <a href="https://www.vettix.org/ref/319690"><img src="" alt="Tickets for Military and Veterans" id="vettix"></a>
+                <p class="vtad"><i class="fa-solid fa-arrow-left"> </i>  to sign up for free tickets to these types of events.</p>
             </div>
         </div>
     </div>
