--- a/guess.html
+++ b/guess.html
@@ -8,7 +8,12 @@
     <!--  <link href="css/index.css" rel="stylesheet">-->
 </head>
 <body>
-
+<h1>I'm thinking of a number between 1 and 100 including 1 and 100.  Can you guess what number I'm thinking of?</h1>
+<h3>How many guesses will it take you to guess it?</h3>
+<form>
+    <label for="guess">Enter your guess here:</label>
+    <input type="number" id="guess" name="guess" min="1" max="100">
+    <button type="button" onclick="checkGuess()">Submit</button>
 <!--<script src="js/functions.js"></script>-->
 <script src="https://kit.fontawesome.com/68715d24c0.js" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.6.1.min.js"
