--- a/guess.html
+++ b/guess.html
@@ -11,16 +11,31 @@
 <h1>I'm thinking of a number between 1 and 100 including 1 and 100.  Can you guess what number I'm thinking of?</h1>
 <h3>How many guesses will it take you to guess it?</h3>
 <form>
-    <label for="guess">Enter your guess here:</label>
-    <input type="number" id="guess" name="guess" min="1" max="100">
-    <button type="button" onclick="checkGuess()">Submit</button>
-<!--<script src="js/functions.js"></script>-->
+    <label for="mynum">Enter your guess here:</label>
+    <input type="number" id="mynum" name="guess" min="1" max="100">
+    <button type="button" onclick="function checkGuess() {
+        let guess = document.getElementById('mynum').value;
+        let mynum = Math.floor(Math.random() * 100) + 1;
+        let guesses = 0;
+        while (guess !== mynum) {
+            if (guess < mynum) {
+                alert("Your guess is too low.  Try again.");
+                guesses++;
+            } else if (guess > mynum) {
+                alert("Your guess is too high.  Try again.");
+                guesses++;
+            }
+        }
+        alert("Congratulations!  You guessed the number in " + guesses + " guesses.");
+    }
+    checkGuess()">Submit</button>
+</form>
+<script src="js/guess.js"></script>
 <script src="https://kit.fontawesome.com/68715d24c0.js" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.6.1.min.js"
         integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
         crossorigin="anonymous">
 </script>
-<script>document.getElementById("age").innerHTML = calculateAge(new Date())</script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
