--- a/guess.html
+++ b/guess.html
@@ -5,7 +5,7 @@
     <title>Guess The Number</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <!--  <link href="css/index.css" rel="stylesheet">-->
+      <link href="css/guess.css" rel="stylesheet">
 </head>
 <body>
 <h1>I'm thinking of a number between 1 and 100 including 1 and 100.  Can you guess what number I'm thinking of?</h1>
@@ -13,22 +13,7 @@
 <form>
     <label for="mynum">Enter your guess here:</label>
     <input type="number" id="mynum" name="guess" min="1" max="100">
-    <button type="button" onclick="function checkGuess() {
-        let guess = document.getElementById('mynum').value;
-        let mynum = Math.floor(Math.random() * 100) + 1;
-        let guesses = 0;
-        while (guess !== mynum) {
-            if (guess < mynum) {
-                alert("Your guess is too low.  Try again.");
-                guesses++;
-            } else if (guess > mynum) {
-                alert("Your guess is too high.  Try again.");
-                guesses++;
-            }
-        }
-        alert("Congratulations!  You guessed the number in " + guesses + " guesses.");
-    }
-    checkGuess()">Submit</button>
+    <button type="button" onclick="checkGuess()">Submit</button>
 </form>
 <script src="js/guess.js"></script>
 <script src="https://kit.fontawesome.com/68715d24c0.js" crossorigin="anonymous"></script>
