--- a/index.html
+++ b/index.html
@@ -109,6 +109,12 @@
                         to do so. Just <a href="OtherProjects/encoding.html">click here</a> to go to the page.</p>
                 </div>
             </section>
+            <section class="col-md-6">
+                <div class="reference-links mt-0 row row-md-2">
+                    <h3 class="ref-title"><a href="OtherProjects/war.html">PLAY THE WAR CARD GAME</a></h3>
+                    <p class="link">If you would like to play the war card game, just <a href="OtherProjects/war.html">click here</a> to go to the page.</p>
+                </div>
+            </section>
             <hr class="sand">
             <section class="col-md-12 buttons mx-auto">
                 <div class="col-xs-6 d-flex justify-content-center">
