changed home page and added devopment projects

--- a/development_projects.html
+++ b/development_projects.html
@@ -26,6 +26,7 @@
             <li><a href="OtherProjects/war.html">War Card Game (Web Dev Simplified/McCloskey)</a></li>
             <li><a href="https://github.com/Rafagithub135/cookie">
                 Cookie's Place website (McCloskey - I'm currently working on this site)</a></li>
+            <li><a href="DragonFightGame/fight_dragon.html">Dragon Fighting Game (FreeCodeCamp/McCloskey)</a> </li>
         </ol>
     </div>
     <div class="col1">
