--- a/guess.html
+++ b/guess.html
@@ -5,16 +5,22 @@
     <title>Guess The Number</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-      <link href="css/guess.css" rel="stylesheet">
+    <link href="css/guess.css" rel="stylesheet">
 </head>
 <body>
-<h1>I'm thinking of a number between 1 and 100 including 1 and 100.  Can you guess what number I'm thinking of?</h1>
-<h3>How many guesses will it take you to guess it?</h3>
-<form>
-    <label for="mynum">Enter your guess here:</label>
-    <input type="number" id="mynum" name="guess" min="1" max="100">
-    <button type="button" onclick="checkGuess()">Submit</button>
-</form>
+<div id="game">
+    <div id="statement">
+        <h1>I'm thinking of a number between 1 and 100 including 1 and 100. Can you guess what number I'm thinking
+            of?</h1>
+        <h3>How many guesses will it take you to guess it?</h3>
+    </div>
+    <div id="guesses">
+        <p id="answer">My number is:  </p>
+        <label for="guess">Enter your guess.</label>
+        <input type="number" id="guess" placeholder="Enter your guess">
+        <p id="lastGuess"></p>
+    </div>
+</div>
 <script src="js/guess.js"></script>
 <script src="https://kit.fontawesome.com/68715d24c0.js" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.6.1.min.js"
