corrected some issues

--- a/index.html
+++ b/index.html
@@ -124,12 +124,12 @@
                 <p class="vtad"><i class="fa-solid fa-arrow-left"> </i> to sign up for free tickets to these types of
                     events.</p>
             </div>
-            <div>
-                <form action="write" id="write">
-                    <label for="input">Enter a phrase you would like to encode:</label>
-                    <input type="text" id="input" name="input" placeholder="Enter here.">
-                </form>
-            </div>
+<!--            <div>-->
+<!--                <form action="write" id="write">-->
+<!--                    <label for="input">Enter a phrase you would like to encode:</label>-->
+<!--                    <input type="text" id="input" name="input" placeholder="Enter here.">-->
+<!--                </form>-->
+<!--            </div>-->
         </div>
     </div>
     <!--    <div class="quote">-->
