--- a/index.html
+++ b/index.html
@@ -1,157 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Ralph McCloskey Resume</title>
-    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link href="css/index.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <title>Ralph McCloskey</title>
 </head>
-<body class="main-page">
-<div class="container-fluid">
-    <header>
-        <div class="row row-cols-3">
-            <section class="col-3 emblem-left">
-                <a href="https://www.marines.com"><img class="emblem" src="./Images/EGA_right.jpg"
-                                                       alt="USMC Emblem Right"></a>
-            </section>
-            <section class="col-6">
-                <h1 class="name py-4">Ralph James McCloskey</h1>
-            </section>
-            <section class="col-3 emblem-right">
-                <a href="https://www.marines.com"><img class="emblem" src="./Images/EGA_left.jpg"
-                                                       alt="USMC Emblem Left"></a>
-            </section>
-        </div>
-        <div class="narrative">
-            <h2 class="title">Front End Web Developer</h2>
-            <!--The id="age" is calculating the number of years I have held a job so the website will update automatically.-->
-            <p id="mtd">With over <span id="age"></span> years in a wide array of career fields I have had many
-                experiences that qualify me for many jobs. I have worked in landscaping, construction, and electronics
-                fields. I spent 23 years in the United States Marine Corps, Marine Corps Reserves, Air Force and Air
-                National Guard. For most of those years I was a vehicle mechanic, tow vehicle operator and aircraft
-                mechanic. I have been licensed to drive tactical vehicles ranging from the Jeep to tractor-trailers and
-                civilian vehicles up to and including 29 passenger buses. I have operated forklifts up to and including
-                a 10,000-pound all-terrain forklift and other special equipment required for the handling of cargo and
-                processing of aircraft. I have performed all tasks related to air travel including passenger check-in
-                and transportation, baggage handling, towing aircraft and directing aircraft to parking spots and even
-                piloting KC-135E and R model aircraft. My experience in the military has trained me for making
-                management decisions and supervising others. There is no vehicle I cannot operate and there is no job I
-                cannot perform with the proper training.</p>
-        </div>
-        <!--contact information-->
-        <div class="contact-links">
-            <section class="row">
-                <!-- Contact Me link connects to contact.html page, LinkedIn link connects to my LinkedIn page and My GitHub link connects to my GitHub page -->
-                <p class="col-md-4 contact"><i class="fa-solid fa-phone"></i> <a class="context" href="contact.html">Contact
-                    Me</a></p>
-                <p class="col-md-4 contact"><i class="fa-brands fa-linkedin"></i> <a class="context"
-                                                                                     href="https://www.linkedin.com/in/ralph-mccloskey-899680a4">LinkedIn</a>
-                </p>
-                <p class="col-md-4 contact"><i class="fa-brands fa-github"></i> <a class="context"
-                                                                                   href="https://www.github.com/Rafagithub135">My
-                    GitHub Account</a></p>
-            </section>
-        </div>
-    </header>
-    <div>
-        <!--Marine Corps colors hr dividers-->
-        <div class="row row-cols-2">
-            <section class="col-6 p-0">
-                <hr class="hr1">
-            </section>
-            <section class="col-6 p-0">
-                <hr class="hr2">
-            </section>
-            <!--resume content-->
-            <div class="col-12">
-                <h3 class="skills-title" id="skills">SKILLS AND ABILITIES</h3>
-                <!--Skills are supposed to come in from variables on functions page-->
-                <section>
-                    <div class="container">
-                        <div class="row row-cols-3">
-                            <div class="col-4">
-                                <ul id="skills-list1" class="col-md-4 m-0 skills"></ul>
-                            </div>
-                            <div class="col-4">
-                                <ul id="skills-list2" class="col-md-4 m-0 skills"></ul>
-                            </div>
-                            <div class="col-4">
-                                <ul id="skills-list3" class="col-md-4 m-0 skills"></ul>
-                            </div>
-                        </div>
-                    </div>
-                </section>
-                <hr class="sand">
-            </div>
-            <section class="col-md-6">
-                <div class="reference-links mt-0 row row-md-2">
-                    <h3 class="ref-title"><a href="academic.html"> ACADEMIC</a></h3>
-                    <p class="link">To see where I've gone to school, <a href="academic.html">click here.</a></p>
-                    <h3 class="ref-title"><a href="work_history.html"> PROFESSIONAL EXPERIENCE</a></h3>
-                    <p class="link">To see where I've worked, <a href="work_history.html">click here.</a></p>
-                </div>
-            </section>
-            <section class="col-md-6">
-                <div class="reference-links mt-0 row row-md-2">
-                    <h3 class="ref-title"><a href="development_projects.html">DEVELOPMENT PROJECTS</a></h3>
-                    <p class="link">To see development projects I've worked on, <a href="development_projects.html">click
-                        here.</a></p>
-                    <h3 class="ref-title"><a href="awards_decorations.html">AWARDS AND DECORATIONS</a></h3>
-                    <p class="link">To see my awards, decorations and personal achievements, <a
-                            href="awards_decorations.html">click here.</a></p>
-                </div>
-            </section>
-            <hr class="sand">
-            <section class="col-md-12 buttons mx-auto">
-                <div class="col-xs-6 d-flex justify-content-center">
-                    <a href="https://www.marines.com"><img src="Images/usmcveteranpin.jpg"
-                                                           alt="United States Marine Corps Veteran" id="usmcvet"></a>
-                </div>
-                <div class="col-xs-0">
-                    <img src="#" alt="" class="space">
-                </div>
-                <div class="col-xs-6 d-flex justify-content-center">
-                    <a href="https://www.airforce.com"><img src="Images/air-force-veteran.png"
-                                                            alt="United States Air Force Veteran" id="afvet"></a>
-                </div>
-            </section>
-            <div class="col-md-12 vettix ms-auto">
-                <p class="vtad">If you are in the military or are a veteran, click here <i
-                        class="fa-solid fa-arrow-right"> </i></p>
-                <a href="https://www.vettix.org/ref/319690"><img src="" alt="Tickets for Military and Veterans"
-                                                                 id="vettix"></a>
-                <p class="vtad"><i class="fa-solid fa-arrow-left"> </i> to sign up for free tickets to these types of
-                    events.</p>
-            </div>
-<!--            <div>-->
-<!--                <form action="write" id="write">-->
-<!--                    <label for="input">Enter a phrase you would like to encode:</label>-->
-<!--                    <input type="text" id="input" name="input" placeholder="Enter here.">-->
-<!--                </form>-->
-<!--            </div>-->
-        </div>
-    </div>
-    <!--    <div class="quote">-->
-    <!--        <p>FAVORITE QUOTE:  "You're only young once, but you can be immature forever." - Germaine Greer - Stated by Larry Andersen in the summer of 1989 (<a-->
-    <!--                href="https://sabr.org/bioproj/person/larry-andersen/">1</a>)</p>-->
-    <!--    </div>-->
-    <div class="no-hate">
-        <p>SAY NO TO HATE!</p>
-    </div>
-<!--     hitwebcounter Code START  <a href="https://www.hitwebcounter.com" target="_blank"></a>-->
-    <img src="https://hitwebcounter.com/counter/counter.php?page=8300263&style=0025&nbdigits=7&type=page&initCount=0"
-         title="Free Counter" Alt="web counter" class="counter"/>
-</div>
-<script src="js/functions.js"></script>
-<script>document.getElementById("age").innerHTML = calculateAge(new Date())</script>
-<script src="https://kit.fontawesome.com/68715d24c0.js" crossorigin="anonymous"></script>
-<script src="https://code.jquery.com/jquery-3.6.1.min.js"
-        integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
-        crossorigin="anonymous">
-</script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
+<body>
+
 </body>
 </html>
