--- a/development_projects.html
+++ b/development_projects.html
@@ -27,6 +27,7 @@
             <li><a href="https://github.com/Rafagithub135/cookie">
                 Cookie's Place website (McCloskey - I'm currently working on this site)</a></li>
             <li><a href="DragonFightGame/fight_dragon.html">Dragon Fighting Game (FreeCodeCamp/McCloskey)</a> </li>
+<!--            <li><a href="palindrome.html">Palindrome Checker</a></li>-->
         </ol>
     </div>
     <div class="col1">
