modified work history and development projects, as well as some css

--- a/work_history.html
+++ b/work_history.html
@@ -67,7 +67,7 @@
             and
             non-powered support equipment such as generators, air conditioning units, gaseous oxygen servicing
             equipment,
-            hydraulic pressure systems, platform loading/unloading equipment, fork lifts, deicing trucks and snow
+            hydraulic pressure systems, platform loading/unloading equipment, roller systems to move pallets onto and off of the airplane, fork lifts, deicing trucks and snow
             removal
             equipment. For a period of time I was the Vehicle Control Non-Commissioned Officer, Tool Room Supervisor and
             the
@@ -114,7 +114,7 @@
             used sandbags that simulated personnel and pallets of different weights that simulated different
             configurations
             of
-            cargo to be dropped. In my position, I operated loaders (flat topped vehicles with a driver cab) used to
+            cargo to be dropped. When the mission is dropping pallets, someone has to be at the drop location to pick up the pallets, load them on a truck and drive them back to the base.  I operated both equipment (forklifts) to pick up the pallets and load them on the 40' trailer, and the tractor trailer to haul the pallets back to the base.  In my position, I operated loaders (flat topped vehicles with a driver cab) used to
             load
             pallets onto aircraft, fork lifts of various sizes, tractor trailer with 40' flat bed used for return
             transportation
@@ -125,7 +125,7 @@
         <p class="year text2">1996 - 1999</p>
         <p class="location text2">Reno, Nevada</p>
         <p id="aptdd" class="text3">Tow Truck Operator, Night Tow Manager, Dispatcher, Vehicle Mechanic, Long Haul Specialist, Nationally Certified Tow Operator</p>
-        <p id="apttt" class="text3">I started with All Points Towing as a tow truck operator after speaking with the owner and asking him what he needed.  His reply was "Drivers!".  I worked the overnight shift and as my seniority grew, I eventually became the person other drivers would turn to for instructions or advise.  Over time, I acquired a knack for taking customers of AAA and All Points to their home cities instead of returning to Reno.  With my background as a mechanic, when the company needed someone to repair the trucks, I worked to keep the fleet on the road.  I assisted the dispatchers with coordinating drivers and connecting them with customers to keep the time spent on the side of the road to a minimum.  My experience as an operator helped me as I often put myself in the place of the operators on the road.  At one point, the opportunity arose to travel to Las Vegas to be tested as a Nationally Certified Tow Operator.  I passed.</p>
+        <p id="apttt" class="text3">I started with All Points Towing as a tow truck operator after speaking with the owner and asking him what he needed.  His reply was "Drivers!".  I worked the overnight shift and as my seniority grew, I eventually became the person other drivers would turn to for instructions or advise.  Over time, I acquired a knack for taking customers of AAA and All Points to their home cities instead of returning to Reno.  With my background as a mechanic, when the company needed someone to repair the trucks, I worked to keep the fleet on the road.  I assisted the dispatchers with coordinating drivers and connecting them with customers to keep the time spent on the side of the road to a minimum.  My experience as an operator helped me as I often put myself in the place of the operators on the road.  At one point, the opportunity arose to travel to Las Vegas to be tested as a Nationally Certified Tow Operator, I passed.</p>
     </div>
     <div class=" border: 2px solid black bg-danger">
         <h2 class="text1">United States Marine Corps/Marine Corps Reserves</h2>
