added image and modified index

--- a/index.html
+++ b/index.html
@@ -118,17 +118,21 @@
             </section>
             <div class="col-md-12 vettix ms-auto">
                 <p class="vtad">If you are in the military or are a veteran, click here <i
-                        class="fa-solid fa-arrow-right"></i></p><a href="https://www.vettix.org/ref/319690">  <img src="" alt="Tickets for Military and Veterans"
-                                                                 id="vettix"></a>
+                        class="fa-solid fa-arrow-right"></i></p><a href="https://www.vettix.org/ref/319690"> <img src=""
+                                                                                                                  alt="Tickets for Military and Veterans"
+                                                                                                                  id="vettix"></a>
                 <p class="vtad"><i class="fa-solid fa-arrow-left"> </i> to sign up for free tickets to these types of
                     events.</p>
             </div>
-<!--            <div>-->
-<!--                <form action="write" id="write">-->
-<!--                    <label for="input">Enter a phrase you would like to encode:</label>-->
-<!--                    <input type="text" id="input" name="input" placeholder="Enter here.">-->
-<!--                </form>-->
-<!--            </div>-->
+            <div class="col-md-12 ms-auto">
+                <comment class="vttext">* - Images without words are examples of seating locations.</comment>
+            </div>
+            <!--            <div>-->
+            <!--                <form action="write" id="write">-->
+            <!--                    <label for="input">Enter a phrase you would like to encode:</label>-->
+            <!--                    <input type="text" id="input" name="input" placeholder="Enter here.">-->
+            <!--                </form>-->
+            <!--            </div>-->
         </div>
     </div>
     <!--    <div class="quote">-->
@@ -138,7 +142,7 @@
     <div class="no-hate">
         <p>SAY NO TO HATE!</p>
     </div>
-<!--     hitwebcounter Code START  <a href="https://www.hitwebcounter.com" target="_blank"></a>-->
+    <!--     hitwebcounter Code START  <a href="https://www.hitwebcounter.com" target="_blank"></a>-->
     <img src="https://hitwebcounter.com/counter/counter.php?page=8300263&style=0025&nbdigits=7&type=page&initCount=0"
          title="Free Counter" Alt="web counter" class="counter"/>
 </div>
