changed skills to be responsive and color

--- a/index.html
+++ b/index.html
@@ -66,18 +66,18 @@
             <!--resume content-->
             <div class="col-12">
                 <h3 class="skills-title" id="skills">SKILLS AND ABILITIES</h3>
-                <!--Skills are supposed to come in from variables on functions page-->
+                <!--Skills come in from variables on functions page-->
                 <section>
                     <div class="container">
-                        <div class="row row-cols-3">
-                            <div class="col-4">
-                                <ul id="skills-list1" class="col-md-4 m-0 skills"></ul>
+                        <div>
+                            <div>
+                                <ul id="skills-list1" class="skills"></ul>
                             </div>
-                            <div class="col-4">
-                                <ul id="skills-list2" class="col-md-4 m-0 skills"></ul>
+                            <div>
+                                <ul id="skills-list2" class="skills"></ul>
                             </div>
-                            <div class="col-4">
-                                <ul id="skills-list3" class="col-md-4 m-0 skills"></ul>
+                            <div>
+                                <ul id="skills-list3" class="skills"></ul>
                             </div>
                         </div>
                     </div>
