fixed issues with images and css

--- a/Certificates/codeup.html
+++ b/Certificates/codeup.html
@@ -6,6 +6,6 @@
     <link href="../css/codeup.css" rel="stylesheet">
 </head>
 <body>
-<img src="../Images/Codeup_Graduation_Certificate.jpg" alt="Codeup Graduation Certificate">
+<img src="../../Ralph-s-Projects/ResponsiveSite/img/Codeup_Graduation_Certificate.jpg" alt="Codeup Graduation Certificate">
 </body>
 </html>
