--- a/Certificates/njanghd.html
+++ b/Certificates/njanghd.html
@@ -6,6 +6,6 @@
     <link rel="stylesheet" href="../css/njanghd.css">
 </head>
 <body>
-<img src="../Images/NJANG_Honorable_Discharge_Certificate.jpg" alt="Air National Guard Honorable Discharge Certificate">
+<img src="../../Ralph-s-Projects/ResponsiveSite/img/NJANG_Honorable_Discharge_Certificate.jpg" alt="Air National Guard Honorable Discharge Certificate">
 </body>
 </html>
