--- a/Certificates/recognition.html
+++ b/Certificates/recognition.html
@@ -6,7 +6,7 @@
     <link href="../css/recognition.css" rel="stylesheet">
 </head>
 <body>
-<img src="../Images/Certificate_Of_Recognition_Cold_War.jpg"
+<img src="../../Ralph-s-Projects/ResponsiveSite/img/Certificate_Of_Recognition_Cold_War.jpg"
      alt="Certificate of Recognition - Service During The Cold War">
 </body>
 </html>
