--- a/Certificates/retirement.html
+++ b/Certificates/retirement.html
@@ -6,6 +6,6 @@
     <link rel="stylesheet" href="../css/retirement.css">
 </head>
 <body>
-<img src="../Images/certificate_of_retirement.jpg" alt="Certificate of Retirement from the United States Air Force">
+<img src="../../Ralph-s-Projects/ResponsiveSite/img/certificate_of_retirement.jpg" alt="Certificate of Retirement from the United States Air Force">
 </body>
 </html>
