--- a/Certificates/usmchd.html
+++ b/Certificates/usmchd.html
@@ -6,6 +6,6 @@
     <link href="../css/usmchd.css" rel="stylesheet">
 </head>
 <body>
-<img src="../Images/USMC_Discharge.jpg" alt="Honorable Discharge Certificate - USMC(R)">
+<img src="../../Ralph-s-Projects/ResponsiveSite/img/USMC_Discharge.jpg" alt="Honorable Discharge Certificate - USMC(R)">
 </body>
 </html>
