--- a/broken.html
+++ b/broken.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="container">
-    <img src="Images/construction.jpeg" alt="Construction" class="image">
+    <img src="../Ralph-s-Projects/ResponsiveSite/img/construction.jpeg" alt="Construction" class="image">
     <h1 class="excuse">Please excuse our mess.</h1>
     <h1 class="const">This page is under construction.</h1>
 </div>
