--- a/index.html
+++ b/index.html
@@ -12,15 +12,13 @@
     <header>
         <div class="row row-cols-3">
             <section class="col-3 emblem-left">
-                <a href="https://www.marines.com"><img class="emblem" src="./Images/EGA_right.jpg"
-                                                       alt="USMC Emblem Right"></a>
+                <a href="https://www.marines.com"><img class="emblem" src="Images/EGA_right.jpg" alt="USMC Emblem Right" height="210" width="192"/></a>
             </section>
             <section class="col-6">
                 <h1 class="name py-4">Ralph James McCloskey</h1>
             </section>
             <section class="col-3 emblem-right">
-                <a href="https://www.marines.com"><img class="emblem" src="./Images/EGA_left.jpg"
-                                                       alt="USMC Emblem Left"></a>
+                <a href="https://www.marines.com"><img class="emblem" src="Images/EGA_left.jpg" height="210" width="192" alt="USMC Emblem Left"></a>
             </section>
         </div>
         <div class="narrative">
@@ -105,23 +103,22 @@
             <hr class="sand">
             <section class="col-md-12 buttons mx-auto">
                 <div class="col-xs-6 d-flex justify-content-center">
-                    <a href="https://www.marines.com"><img src="Images/usmcveteranpin.jpg"
-                                                           alt="United States Marine Corps Veteran" id="usmcvet"></a>
+                    <a href="https://www.marines.com"><img src="Images/usmcveteranpin.jpg" height="227" width="227" alt="United States Air Force Veteran"/></a>
                 </div>
                 <div class="col-xs-0">
                     <img src="#" alt="" class="space">
                 </div>
                 <div class="col-xs-6 d-flex justify-content-center">
-                    <a href="https://www.airforce.com"><img src="Images/air-force-veteran.png"
-                                                            alt="United States Air Force Veteran" id="afvet"></a>
+                    <a href="https://www.airforce.com"><img
+                            src="Images/air-force-veteran.jpg" height="227" width="227" alt="United States Air Force Veteran"/></a>
                 </div>
             </section>
             <div class="col-md-12 vettix ms-auto">
-                <p class="vtad">If you are in the military or are a veteran, click here <i
+                <p class="vtad">If you are in the military, or are a veteran, click here   <i
                         class="fa-solid fa-arrow-right"></i></p><a href="https://www.vettix.org/ref/319690"> <img src=""
                                                                                                                   alt="Tickets for Military and Veterans"
                                                                                                                   id="vettix"></a>
-                <p class="vtad"><i class="fa-solid fa-arrow-left"> </i> to sign up for free tickets to these types of
+                <p class="vtad"><i class="fa-solid fa-arrow-left"></i>   to sign up for free tickets to these types of
                     events.</p>
             </div>
             <div class="col-md-12 ms-auto">
