--- a/awards_decorations.html
+++ b/awards_decorations.html
@@ -19,7 +19,7 @@
 <div class="container-fluid m-0 p-0">
     <div class="ribbon-section">
         <hr>
-        <img src="Images/UpdatedRibbonRack.png" alt="Ribbons earned in military service">
+        <img src="Images/Ribbon_Rack.jpg" alt="Ribbons earned in military service">
     </div>
     <div>
         <ol class="ribbons-list">
@@ -66,8 +66,7 @@
                     alt="Air National Guard Honorable Discharge Certificate"></a></div>
         </div>
         <div class="card">
-            <div class="card-body"><a href="Certificates/usmchd.html"><img src="Images/USMC_Discharge.jpg"
-                                                                           alt="Honorable Discharge Certificate - USMC(R)"></a>
+            <div class="card-body"><a href="Certificates/usmchd.html"><img src="Images/USMC_Discharge.jpg" alt="Honorable Discharge Certificate - USMC(R)"></a>
             </div>
         </div>
         <div class="card">
