corrected description of military ribbons

--- a/awards_decorations.html
+++ b/awards_decorations.html
@@ -23,7 +23,7 @@
     </div>
     <div>
         <ol class="ribbons-list">
-            <li>Meritorious Service Ribbon With 4 Bronze Oak Leafs (pictured here with "R")</li>
+            <li>Meritorious Service Ribbon With 4 Bronze Oak Leafs</li>
             <li>United States Marine Corps Presidential Unit Citation</li>
             <li>Air Force Outstanding Unit Ribbon</li>
             <li>Selected Marine Corps Reserve Medal</li>
