--- a/index.html
+++ b/index.html
@@ -103,21 +103,19 @@
             <hr class="sand">
             <section class="col-md-12 buttons mx-auto">
                 <div class="col-xs-6 d-flex justify-content-center">
-                    <a href="https://www.marines.com"><img src="Images/usmcveteranpin.jpg" height="227" width="227" alt="United States Air Force Veteran"/></a>
+                    <a href="https://www.marines.com"><img src="Images/usmcveteranpin.jpg" alt="United States Marine Corps Veteran" id="usmcvet"/></a>
                 </div>
                 <div class="col-xs-0">
                     <img src="#" alt="" class="space">
                 </div>
                 <div class="col-xs-6 d-flex justify-content-center">
                     <a href="https://www.airforce.com"><img
-                            src="Images/air-force-veteran.jpg" height="227" width="227" alt="United States Air Force Veteran"/></a>
+                            src="Images/air-force-veteran.jpg" alt="United States Air Force Veteran"/></a>
                 </div>
             </section>
             <div class="col-md-12 vettix ms-auto">
                 <p class="vtad">If you are in the military, or are a veteran, click here   <i
-                        class="fa-solid fa-arrow-right"></i></p><a href="https://www.vettix.org/ref/319690"> <img src=""
-                                                                                                                  alt="Tickets for Military and Veterans"
-                                                                                                                  id="vettix"></a>
+                        class="fa-solid fa-arrow-right"></i></p><a href="https://www.vettix.org/ref/319690"> <img src="" alt="Tickets for Military and Veterans" id="vettix"></a>
                 <p class="vtad"><i class="fa-solid fa-arrow-left"></i>   to sign up for free tickets to these types of
                     events.</p>
             </div>
