added sql to skills and abilities

--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
             </section>
         </div>
     </header>
-    <div>
         <!--Marine Corps colors hr dividers-->
         <div class="row row-cols-2">
             <section class="col-6 p-0">
@@ -121,7 +120,7 @@
             </div>
             <div class="col-md-12 ms-auto">
                 <comment class="vttext">* - Images without words are examples of seating locations.</comment>
-            </div>
+<!--            </div>-->
             <!--            <div>-->
             <!--                <form action="write" id="write">-->
             <!--                    <label for="input">Enter a phrase you would like to encode:</label>-->
