added speech timer project

--- a/development_projects.html
+++ b/development_projects.html
@@ -28,6 +28,7 @@
             <li><a href="https://github.com/Rafagithub135/cookie">
                 Cookie's Place website (McCloskey - I'm currently working on this site)</a></li>
 <!--            <li><a href="palindrome.html">Palindrome Checker</a></li>-->
+            <li><a href="speech_timer.html">Speech Timer (McCloskey - I'm still working on finishing touches here)</a></li>
         </ol>
     </div>
     <div class="col1">
