--- a/academic.html
+++ b/academic.html
@@ -22,7 +22,7 @@
 <!--                    <p class="penn_text text1">Penn State University</p>-->
 <!--                    <p class="penn_text text2">Harrisburg, Pennsylvania</p>-->
 <!--                    <p class="penn_text text2">Bachelors Degree - Computer Science</p>-->
-<!--                    <p class="penn_text text2">2024 - 2026</p>-->
+<!--                    <p class="penn_text text2">2025</p>-->
 <!--                    <p class="penn_text text3">At Penn State, I'm completing my bachelors degree in Computer Science.</p>-->
 <!--                </div>-->
 <!--            </div>-->
@@ -34,7 +34,7 @@
                     <p class="ccp_text text1">Community College of Philadelphia</p>
                     <p class="ccp_text text2">Philadelphia, Pennsylvania</p>
                     <p class="ccp_text text2">Computer Science</p>
-                    <p class="ccp_text text2">2023 - 2024</p>
+                    <p class="ccp_text text2">2023 - 2025</p>
                     <p class="ccp_text text3">I'm pursuing my Computer Science degree.  I am currently attending the Community College of Philadelphia to take some prerequisites.  Then I will be transferring to Penn State.</p>
                 </div>
             </div>
