--- a/index.html
+++ b/index.html
@@ -41,14 +41,10 @@
         <div class="contact-links">
             <section class="row">
                 <!-- Contact Me link connects to contact.html page, LinkedIn link connects to my LinkedIn page and My GitHub link connects to my GitHub page -->
-                <p class="col-md-4 contact"><i class="fa-solid fa-phone"></i> <a class="context" href="contact.html">Contact
-                    Me</a></p>
-                <p class="col-md-4 contact"><i class="fa-brands fa-linkedin"></i> <a class="context"
-                                                                                     href="https://www.linkedin.com/in/ralph-mccloskey-899680a4">LinkedIn</a>
-                </p>
-                <p class="col-md-4 contact"><i class="fa-brands fa-github"></i> <a class="context"
-                                                                                   href="https://www.github.com/Rafagithub135">My
-                    GitHub Account</a></p>
+                <p class="col-md-3 contact"><i class="fa-solid fa-phone"></i><a class="context" href="contact.html">Contact Me</a></p>
+                <p class="col-md-3 contact"><i class="fa-brands fa-linkedin"></i><a class="context" href="https://www.linkedin.com/in/ralph-mccloskey-899680a4">LinkedIn</a></p>
+                <p class="col-md-3 contact"><i class="fa-brands fa-github"></i><a class="context" href="https://www.github.com/Rafagithub135">My GitHub Account</a></p>
+                <p class="col-md-3 contact"><i class="fa-solid fa-quote-left"></i><a class="context" href="quotes.html">Favorite Quotes</a><i class="fa-solid fa-quote-right"></i>" </p>
             </section>
         </div>
     </header>
@@ -65,7 +61,7 @@
                 <h3 class="skills-title" id="skills">SKILLS AND ABILITIES</h3>
                 <!--Skills come in from variables on functions page-->
                 <section>
-                    <div class="container">
+                    <div class="container skills-container">
                         <div>
                             <div>
                                 <ul id="skills-list1" class="skills"></ul>
