--- a/quotes.html
+++ b/quotes.html
@@ -30,5 +30,10 @@
         "Two feet." After that moment, anywhere I needed to travel, and didn't have transportation to get there, I've
         remembered that quote.</p>
 </div>
+<div class="quote3">
+    <h2>Quote # 3</h2>
+    <p>"War is war, and Hell is Hell. And of the two, war is a lot worse."</p>
+    <p>In the TV series M*A*S*H, Season 5, Episode 20, while in the operating room, Frank Burns says, "Everybody knows war is Hell. After a short remark from B.J., Pierce says the above quote.  After Father Mulcahy inquires to Pierce's logic, Hawkeye goes on to clarify that only sinners go to Hell and that there are no innocent bystanders.  But War is full of innocent people, children, old ladies, and even the soldiers fighting the war are, for the most part, innocent.</p>
+</div>
 </body>
 </html>
