added a quote and edited some images

--- a/quotes.html
+++ b/quotes.html
@@ -32,8 +32,21 @@
 </div>
 <div class="quote3">
     <h2>Quote # 3</h2>
-    <p>"War isn't Hell.  War is war, and Hell is Hell. And of the two, war is a lot worse."</p>
-    <p>In the TV series M*A*S*H, Season 5, Episode 20, while in the operating room, Frank Burns says, "Everybody knows war is Hell. After a short remark from B.J., Pierce says the above quote.  After Father Mulcahy inquires to Pierce's logic, Hawkeye goes on to clarify that only sinners go to Hell and that there are no innocent bystanders.  But War is full of innocent people, children, old ladies, and even the soldiers fighting the war are, for the most part, innocent.</p>
+    <p>"War isn't Hell. War is war, and Hell is Hell. And of the two, war is a lot worse."</p>
+    <p>In the TV series M*A*S*H, Season 5, Episode 20, while in the operating room, Frank Burns says, "Everybody knows
+        war is Hell. After a short remark from B.J., Pierce says the above quote. After Father Mulcahy inquires to
+        Pierce's logic, Hawkeye goes on to clarify that only sinners go to Hell and that there are no innocent
+        bystanders. But War is full of innocent people, children, old ladies, and even the soldiers fighting the war
+        are, for the most part, innocent.</p>
+</div>
+<div class="quote4">
+    <h2>Quote # 4</h2>
+    <p>"A person should be so deep in study that he forgets to eat, so full of joy in learning he ignores all practical worries, and so busy acquiring knowledge he does not notice old age coming on."</p>
+    <p>This quote, is not necessarily a quote.  I got it from a publication entitled, "Socrates A Man for Our Times" by Paul Johnson.  It is said that the words I've written here were, according to the pupils of Confucius, Confucius' view.  But I like the attitude of taking what you desire, and getting it by the dedication it takes to work on it.  Work at your job so deeply that you don't realize it's lunchtime.  It doesn't have to be education, that was just Confucius' passion.</p>
+</div>
+<div class="quote5">
+<!--    <h2>Quote # 5</h2>-->
+<!--    <p></p>-->
 </div>
 </body>
 </html>
