added a quote and edited some images

--- a/quotes.html
+++ b/quotes.html
@@ -45,8 +45,14 @@
     <p>This quote, is not necessarily a quote.  I got it from a publication entitled, "Socrates A Man for Our Times" by Paul Johnson.  It is said that the words I've written here were, according to the pupils of Confucius, Confucius' view.  But I like the attitude of taking what you desire, and getting it by the dedication it takes to work on it.  Work at your job so deeply that you don't realize it's lunchtime.  It doesn't have to be education, that was just Confucius' passion.</p>
 </div>
 <div class="quote5">
-<!--    <h2>Quote # 5</h2>-->
-<!--    <p></p>-->
+    <h2>Quote # 5</h2>
+    <p>To me, you're a genius.  To O'Mally, you're a genius.  But to a genius, you're no genius.</p>
+    <p>In 2011, the Canadian Rock band, Rush made a video as a prelude to open up their concerts.  In the video, Geddy Lee (Bass, Vocals, Keyboards) plays an owner (assumed) of a sausage diner.  Neil Peart (Percussion/Lyricist, Professor) plays a cop (O'Mally) and Alex Lifeson (Guitars, Keyboards) plays a music producer.  One of the lines Geddy says to Alex is the quote.
+</div>
+<div class="quote6">
+    <h2>Quote # 6</h2>
+    <p>"When you have to shoot, shoot.  Don't talk."</p>
+    <p>In the movie, The Good, The Bad, and The Ugly, the character Tuco Ramirez brother of bBrother Ramirez finds himself in a bombed out building, but there is a bathtub with water in it.  So he decides to take a bath.  While he is in the bath, a gunslinger from his past visits him and begins a soliloquy about how he has dreamt of killing Tuco.  Just at the end of the man's speech, Tuco shoots him dead and tells him the above quote.</p>
 </div>
 </body>
 </html>
